Add label filter and labels to each individual term

--- a/src/content/basics/resources/graphql-glossary.mdx
+++ b/src/content/basics/resources/graphql-glossary.mdx
@@ -6,6 +6,6 @@ description: Glossary of Apollo and GraphQL terminology
 
 import GlossaryPage from '../../../components/GlossaryPage';
 
-As you explore Apollo, you might encounter some unfamiliar terms and phrases along the way. To help you on your journey, we've defined some of the most common Apollo and GraphQL vocabulary here in this handy cheat sheet.
+As you familarize yourself with GraphQL and explore what Apollo has to offer, you might encounter some unfamiliar terms along the way. To help you on your journey, we've defined some of the most common Apollo and GraphQL vocabulary in this glossary.
 
 <GlossaryPage />
