--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -14,7 +14,7 @@ Contact your Apollo customer success team to complete the SAF assessment. If you
   colorScheme="indigo"
   href="https://www.apollographql.com/contact-sales"
 >
-  Contact Apollo
+  Get in touch
 </ButtonLink>
 
 ## SAF Pillars
