--- a/src/content/graphos/delivery/schema-proposals.mdx
+++ b/src/content/graphos/delivery/schema-proposals.mdx
@@ -13,15 +13,36 @@ As your supergraph schema grows in complexity, it can be increasingly challengin
 
 - Schema proposals facilitate communication across your organization. In particular, they empower graph consumers to actively participate in the schema change process. This increased coordination leads to more informed design decisions, ultimately streamlining development cycles.
 
-## Permissions
+## Proposal workflow
 
-[Permissions](/graphos/org/members) for actions in the proposal process are set at the graph level with the following defaults. Org and graph admins can update permissions based on an organization's needs.
+When a schema published to the proposal's source-variant contains changes that are in an open proposal, the corresponding [launch](./launches) appears in the proposal's activity log.
 
-| Role              | Create | Edit | View proposal | Comment | Suggest changes | Approve |
-| ----------------- | ------ | ---- | ------------- | ------- | --------------- | ------- |
-| Org / Graph Admin | ✔️     | ✔️   | ✔️            | ✔️      | ✔️              | ✔️      |
-| Contributor       | ✔️     | ✔️   | ✔️            | ✔️      | ✔️              | ✔️      |
-| Documenter        | ✔️     | ✔️   | ✔️            | ✔️      | ✔️              | ✔️      |
-| Observer          | ✔️     | ✔️   | ✔️            | ✔️      | ✔️              | ✔️      |
-| Consumer          | ❌     | ❌   | ❌            | ✔️      | ❌              | ❌      |
-| Billing Admin     | ❌     | ❌   | ❌            | ❌      | ❌              | ❌      |
+<img
+  src="../img/schema-proposals/proposal-implementation-status.jpg"
+  className="screenshot"
+  alt="Schema proposals settings in Studio"
+/>
+
+When an open proposal's changes have been fully implemented, its status changes to **Implemented**. Multiple launches can contribute to a proposal being fully implemented.
+
+<img
+  src="../img/schema-proposals/fully-implemented-proposal.jpg"
+  className="screenshot"
+  alt="Schema proposals settings in Studio"
+/>
+
+Implemented proposals are no longer editable.
+
+<Note>
+
+Proposals in draft mode can't receive the **Implemented** status, even when all changes are incorporated into launmches. A draft proposal's status automatically switches to Implemented once its status is changed to **Open for feedback**.
+
+</Note>
+
+The overall workflow that schema proposals enable is as follows:
+
+<img
+  src="../img/schema-proposals/proposal-workflow.jpg"
+  className="screenshot"
+  alt="Schema proposals settings in Studio"
+/>
