--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -4,28 +4,17 @@ title: Schema proposal configurations
 
 <GraphOSEnterpriseRequired />
 
-## Reviewer and role configurations
+To-do: Overview of configurations
 
-From a graph's **Settings** page, [graph admins](../org/members/#organization-wide-member-roles) can set:
+## Configure permissions
 
-- **Approval requirements**: the minimum number of approvals a proposal must receive for its status to be **Approved**
-
-    <Note>
-
-  Changing the minimum number of required approvals changes the status of existing proposals that aren't [**Closed** or **Implemented**](./propose-changes#change-proposal-status) based on whether their current number of approvals meets the new minimum required approvals threshold.
-
-    </Note>
-
-- **Default reviewers**: the team members to mark as default reviewers
-- **Permisssions**: the minimum [role](../org/members/#organization-wide-member-roles) required to create proposals
+- **Permissions**: the minimum [role](../org/members/#organization-wide-member-roles) required to create proposals
 
 <img
   src="../img/schema-proposals/schema-proposal-settings.jpg"
   className="screenshot"
   alt="Schema proposals settings in Studio"
 />
-
-### Permission defaults
 
 [Permissions](/graphos/org/members) for actions in the proposal process are set at the graph level with the following defaults. Org and graph admins can update permissions based on an organization's needs.
 
@@ -38,7 +27,23 @@ From a graph's **Settings** page, [graph admins](../org/members/#organization-wi
 | Consumer          | ❌     | ❌   | ❌            | ✔️      | ❌              | ❌      |
 | Billing Admin     | ❌     | ❌   | ❌            | ❌      | ❌              | ❌      |
 
-## Configure proposals in schema checks
+## Configure reviews and approvals
+
+From a graph's **Settings** page, [graph admins](../org/members/#organization-wide-member-roles) can set:
+
+To-do: Create table with default values
+
+- **Approval requirements**: the minimum number of approvals a proposal must receive for its status to be **Approved**
+
+    <Note>
+
+  Changing the minimum number of required approvals changes the status of existing proposals that aren't [**Closed** or **Implemented**](./propose-changes#change-proposal-status) based on whether their current number of approvals meets the new minimum required approvals threshold.
+
+    </Note>
+
+- **Default reviewers**: the team members to mark as default reviewers
+
+## Configure schema checks
 
 [Schema checks](./schema-checks) include a **Proposals** task that checks whether diffs included in a check have matching and approved proposals.
 
@@ -75,3 +80,7 @@ Clicking the icons reveals a list of matching proposals in the right panel.
 Clicking **Ignore** will result in the status of Proposals to not cause a check to warn or fail, and will automatically re-run the check to apply this setting.
 
 Incoming subgraph changes in the checks pipeline and approved proposals don't need to map 1:1. That is, if you have an approved proposal with changes across multiple subgraphs, you can push those changes through the pipeline one by one and they will still get matched. Similarly, if a single proposal contains a large change that you would like to divide into multiple check requests in the pipeline, then those will still get matched.
+
+## Configure notifications
+
+To-do
