--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -218,11 +218,7 @@ After you create a PQL, you can link it to one or more variants of your graph. E
 
 4. Click **Save**.
 
-After you link a PQL to a variant:
-
-1. GraphOS validates the PQL against the variant's reported operation history and flags any recent operations not represented in the PQL.
-
-2. GraphOS then uploads the PQL to [Uplink](/federation/managed-federation/uplink/), the service that delivers configuration to your router at runtime.
+After you link a PQL to a variant, GraphOS uploads the PQL to [Uplink](/federation/managed-federation/uplink/), the service that delivers configuration to your router at runtime.
 
 ### 2. Router configuration
 
