Track events in SAF and Cloud dedicated

--- a/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
+++ b/src/content/graphos/enterprise/supergraph-architecture-framework.mdx
@@ -9,13 +9,14 @@ The SAF includes an assessment to quantify your supergraph's current state and i
 
 Contact your Apollo customer success team to complete the SAF assessment. If you're just getting started with Apollo, don't hesitate to get in touch.
 
-<ButtonLink
-  size="md"
+<TrackableButton
+  size="lg"
   colorScheme="indigo"
   href="https://www.apollographql.com/contact-sales"
+  eventName="content_contact_sales"
 >
   Get in touch
-</ButtonLink>
+</TrackableButton>
 
 ## SAF Pillars
 
