--- a/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/lattice.mdx
@@ -6,7 +6,7 @@ description: Configure AWS VPC Lattice to send and receive traffic to and from y
 
 <PreviewFeature>
 
-Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to [get in touch](mailto:cloud@apollographql.com) if you'd like to request access or have any questions or feedback.
+Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to <a href="mailto:cloud@apollographql.com" onClick={() => window?.gtag?.('event', 'docs_content_contact_cloud')}>get in touch</a> if you'd like to request access or have any questions or feedback.
 
 </PreviewFeature>
 
@@ -37,7 +37,7 @@ flowchart LR;
 
 <Note>
 
-- You can only use Lattice for subgraphs in the **same AWS region as your cloud router**. If you need to run subgraphs in different AWS regions or run your workloads in a region not yet supported by Cloud Dedicated, please [let us know](mailto:cloud@apollographql.com).
+- You can only use Lattice for subgraphs in the **same AWS region as your cloud router**. If you need to run subgraphs in different AWS regions or run your workloads in a region not yet supported by Cloud Dedicated, please <a href="mailto:cloud@apollographql.com" onClick={() => window?.gtag?.('event', 'docs_content_contact_cloud')}>let us know</a>.
 - Using AWS VPC Lattice incurs costs outside of your Cloud Dedicated spend. Refer to the [Lattice pricing page](https://aws.amazon.com/vpc/lattice/pricing/) to learn more.
 
 </Note>
@@ -560,7 +560,7 @@ To update a Lattice service's authorization policy with additional restrictions,
 
 #### Obtain account ID and graph ref
 
-- [Contact Apollo](mailto:cloud@apollographql.com) to obtain your account ID. Specify you would like the account ID needed to update your Lattice service's authorization policy.
+- <a href="mailto:cloud@apollographql.com" onClick={() => window?.gtag?.('event', 'docs_content_contact_cloud')}>Contact Apollo</a> to obtain your account ID. Specify you would like the account ID needed to update your Lattice service's authorization policy.
 
   <Note>
 
