--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -94,7 +94,7 @@ Apollo works with major public cloud providers to deliver GraphOS cloud routing.
 
 Cloud routing for Serverless plans is only available in Chicago, USA. Our infrastructure has interconnects with major public cloud providers, so latency is minimal. For example, latency between Chicago and AWS in Virginia is approximately 10ms. If there's a specific region you'd like us to support please [request a region](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform).
 
-Cloud routing on the [Dedicated](./cloud-dedicated) plan has a wider variety of options. [Get in touch](mailto:cloud@apollographql.com) to learn more.
+Cloud routing on the [Dedicated](./cloud-dedicated) plan has a wider variety of options. <a href="mailto:cloud@apollographql.com" onClick={() => window?.gtag?.('event', 'docs_content_contact_cloud')}>Get in touch</a> to learn more.
 
 #### Can I choose my cloud router's region?
 
