Track other contact-sales links

--- a/src/content/graphos/basics/routing/cloud-configuration.mdx
+++ b/src/content/graphos/basics/routing/cloud-configuration.mdx
@@ -62,7 +62,7 @@ On the [**Serverless** plan](../org/plans/), you can configure:
 
 [Dedicated and Enterprise plans](../org/plans/) offer a [wider variety of configurations](/router/configuration/overview#yaml-config-file).
 
-**If you require more advanced router customization,** please [reach out](https://www.apollographql.com/contact-sales/) to learn about your about Dedicated and Enterprise plan options.
+**If you require more advanced router customization,** please <a href="https://www.apollographql.com/contact-sales/" onClick={() => window?.gtag?.('event', 'docs_content_contact_sales')}>reach out</a> to learn about your about Dedicated and Enterprise plan options.
 
 ### HTTP header rules
 
