--- a/src/content/graphos/org/plans.mdx
+++ b/src/content/graphos/org/plans.mdx
@@ -34,7 +34,7 @@ Apollo offers the following plans to new organizations:
 
 > An Enterprise plan provides access to all GraphOS Enterprise features, our Graph Champions community, and a dedicated support channel for your team to talk with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
 >
-> If you're interested in an Enterprise plan, please [get in touch!](https://www.apollographql.com/contact-sales/)
+> If you're interested in an Enterprise plan, please <a href="https://www.apollographql.com/contact-sales/" onClick={() => window?.gtag?.('event', 'docs_content_contact_sales')}>get in touch!</a>
 
 ### Enterprise trials
 
