Add back TrackableLink

--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -84,7 +84,7 @@ Additional GraphOS features are available to organizations on an **Enterprise** 
 
 An Enterprise plan also provides access to our Graph Champions community and a dedicated support channel for your team to connect with Apollo supergraph experts. We'll work with you to customize a query volume limit and support package that's right for you.
 
-**If you're interested in Enterprise features,** please <a href="https://www.apollographql.com/contact-sales/" onClick={() => window?.gtag?.('event', 'docs_content_contact_sales')}>get in touch with us!</a> You can also test out these features with a free [Enterprise trial](./org/plans/#enterprise-trials).
+**If you're interested in Enterprise features,** please <TrackableLink href="https://www.apollographql.com/contact-sales" eventName="content_contact_sales">get in touch with us</TrackableLink>! You can also test out these features with a free [Enterprise trial](./org/plans/#enterprise-trials).
 
 ---
 
