--- a/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
+++ b/src/content/graphos/basics/routing/cloud-dedicated/index.mdx
@@ -6,7 +6,7 @@ description: Learn about Apollo's dedicated cloud routing for GraphQL APIs
 
 <PreviewFeature>
 
-Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to <a href="mailto:cloud@apollographql.com" onClick={() => window?.gtag?.('event', 'docs_content_contact_cloud')}>get in touch</a> if you'd like to request access or have any questions or feedback.
+Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
 
 </PreviewFeature>
 
@@ -14,7 +14,7 @@ GraphOS **Cloud Dedicated** is the Apollo offering that lets you run a cloud rou
 
 ## Private preview
 
-Cloud Dedicated is a new product and is in [preview](/resources/product-launch-stages/#preview) while it matures. It is only available to select customers on an invite-only basis. If you have feedback or are interested in joining the preview, <a href="mailto:cloud@apollographql.com" onClick={() => window?.gtag?.('event', 'docs_content_contact_cloud')}>get in touch</a>.
+Cloud Dedicated is a new product and is in [preview](/resources/product-launch-stages/#preview) while it matures. It is only available to select customers on an invite-only basis. If you have feedback or are interested in joining the preview, <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">get in touch</TrackableLink>.
 
 Please note the following while Cloud Dedicated is in preview:
 
