--- a/src/content/graphos/basics/routing/index.mdx
+++ b/src/content/graphos/basics/routing/index.mdx
@@ -129,7 +129,7 @@ Somes organizations might need to use Cloud Dedicated or self-hosted routing ins
 
 With the exception of Apollo-managed routing, self-hosted supergraphs benefit from all of the same GraphOS features as cloud supergraphs: metrics reporting, schema checks, the Explorer, etc.
 
-If you are interested in either Cloud Dedicated or self-hosted routing, don't hesitate to <a href="https://www.apollographql.com/contact-sales/" onClick={() => window?.gtag?.('event', 'docs_content_contact_sales')}>get in touch.</a>.
+If you are interested in either Cloud Dedicated or self-hosted routing, don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales" eventName="content_contact_sales">get in touch</TrackableLink>.
 
 ## Setup and configuration
 
