Use "linked" vs. "associated"

--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -218,7 +218,7 @@ After you create a PQL, you can link it to one or more variants of your graph. E
 
 4. Click **Save**.
 
-After you link a PQL to a variant, GraphOS makes the PQL available in [Uplink](/federation/managed-federation/uplink/), the service that delivers configurations to your router at runtime. The router polls Uplink to ensure it always uses the most up-to-date PQL for linked variants.
+After you link a PQL to a variant, GraphOS makes the PQL available in [Uplink](/federation/managed-federation/uplink/), the service that delivers configurations to your router at runtime. Once [configured](#2-router-configuration), the router polls Uplink to ensure it uses the most up-to-date PQL for linked variants.
 
 ### 2. Router configuration
 
