--- a/src/content/shared/pq-router-configuration.mdx
+++ b/src/content/shared/pq-router-configuration.mdx
@@ -1,4 +1,4 @@
-As soon as a graph has an associated PQL, you can configure router instances to fetch and use the PQL by following these steps:
+As soon as a graph variant has a linked PQL, you can configure router instances to fetch and use the PQL by following these steps:
 
 1. Ensure your router instances are ready to work with PQLs:
 
